--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -8,20 +8,12 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
-    
-    - name: configure
-      run: ./configure
       
     - name: Install dependencies
-      run: make
+      run: make 
       
-    - name: Run check
-      run: make check
-      
-    - name: Run distcheck
-      run: make distcheck
+    - name: Build artifacts
+      run: make 
