--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -12,8 +12,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       
-    - name: Install dependencies
-      run: make 
+    # - name: Install dependencies
+    #  run: make 
       
     - name: Build artifacts
       run: make 
