--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -11,11 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-      - name: Build artifacts
-        run: make
+    - name: Build artifacts
+      run: make
   upload:
     needs: build
+    steps:
     - uses: actions/upload-artifact@v3
       with:
         name: ri36
-        path: ri36
+        path: path/to/artifact/world.txt
