--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,6 +14,7 @@ jobs:
     - name: Build artifacts
       run: make
   upload:
+    runs-on: ubuntu-latest
     needs: build
     steps:
     - uses: actions/upload-artifact@v3
