--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -9,12 +9,37 @@ on:
     branches: [ "master" ]
 
 jobs:
+  
+  analyze:
+    name: Analyze vulnerabilities
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'cpp' ]
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v2
+      with:
+        languages: ${{ matrix.language }}
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v2
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
+
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Build artifacts
       run: make
+  
   upload:
     runs-on: ubuntu-latest
     needs: build
