--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -35,10 +35,13 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: analyze
     steps:
     - uses: actions/checkout@v3
     - name: Build artifacts
       run: make
+    - name: list files
+      run: ls -la
   
   upload:
     runs-on: ubuntu-latest
