--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -40,8 +40,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build artifacts
       run: make
-    - name: list files
-      run: pwd
   
   upload:
     runs-on: ubuntu-latest
@@ -50,4 +48,4 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: ri36
-        path: ./ri36
+        path: /home/runner/work/RI/RI/ri36
