--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -33,18 +33,13 @@ jobs:
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
 
-  build:
+  build-and-upload:
     runs-on: ubuntu-latest
     needs: analyze
     steps:
     - uses: actions/checkout@v3
     - name: Build artifacts
       run: make
-  
-  upload:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
     - uses: actions/upload-artifact@v3
       with:
         name: ri36
